# bookish

./: package-lock.json  pyproject.toml
bookish/controllers/: __init__.py  book.py  bookish.py
bookish/models/: book.py  copybook.py
bookish/utils/: auth.py
migrations/versions/: 8267447f4275_.py
