[tool.poetry]
name = "bookish"
version = "0.1.0"
description = ""
authors = ["Tom Johnson <tom.johnson@softwire.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Flask = "^3.1.2"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.1.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
pyjwt = "^2.12.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
